--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
     <div id="container";"box1">
 			<p><a href="./dotto.html">課題の提出</a></p><br>
 		<p><a href="./dotto2.html">課題の２</a></p>
-		<p><a href="./dotto3.html">課題の３　#9</a>
-		<p><a href="./dotto4.html">課題の４　＃１０</a>
+		<p><a href="./dotto3.html">課題の３　#9</a></p>
+		<p><a href="./dotto4.html">課題の４　＃１０</a></p>
+		<p><a href="./dotto5.html">課題の5　＃11</a></p>
+		<p><a href="./dotto6.html">課題の6　＃12</a></p>
+		<p><a href="./dotto7.html">課題の7　＃13</a></p>
+		<p><a href="./dotto8.html">課題の8　＃14</a></p>
+		<p><a href="./dotto9.html">課題の9　＃15-16</a></p>
+		<p><a href="./dotto10.html">課題の10　＃17</a></p>
+		<p><a href="./dotto11.html">課題の11　＃18</a></p>
+		<p><a href="./dotto12.html">課題の12　＃19</a></p>
 		</div>
     </body>
 
